--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "CR"]
 	path = CR
 	url = https://github.com/GSE79/CR.git
+[submodule "CS"]
+	path = CS
+	url = https://github.com/GSE79/CS.git
